--- a/links.html
+++ b/links.html
@@ -386,7 +386,7 @@ position: absolute;
 	top: 10.5%;
 width: 594px;
 height: 433px;
-overflow-x:hidden;
+overflow:hidden;
 z-index: 6;
  }
 #aaa {
@@ -407,27 +407,27 @@ z-index: 3;
     -o-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg); }
-#stuff { overflow: auto; overflow: scroll; }
+#stuff { overflow:hidden;}
 }
 @media screen and (min-width: 1700px) and (orientation: landscape){
 #everything { position: absolute; zoom: 130%;
 	left:240px;
 	top:80px; }
-#stuff { overflow: auto; overflow: scroll; }
+#stuff { overflow:hidden; }
 }
 @media screen and (min-width: 2000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%;}
-#stuff { overflow: auto; overflow: scroll; }
+#stuff { overflow:hidden; }
 }
 @media screen and (min-width: 3000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 260%;
 	left:240px;
 	top:80px; }
-#stuff { overflow: auto; overflow: scroll; }
+#stuff { overflow:hidden; }
 }
 @media screen and (max-width: 1000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
-#stuff { overflow: auto; overflow: scroll; }
+#stuff { overflow:hidden; }
 }
 </style>
 
@@ -464,81 +464,85 @@ z-index: 3;
 
 <div id="stuff">
 
-<div style="position:absolute; left:22%; right:22%;">
+<div style="position:absolute; left:19.5%; right:19.5%;">
 <br><br><br>
 <style>
 #ooo { color: #c4a9ab; }
 </style>
 
-<div style="position:relative;  top:-8; width: 120px; height: 200px; overflow:hidden; float:left; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:14px; padding:5px; padding-top:15px;">
-<font color="#b89c9f">
-<sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/ihkqM9r.png"></sub></sub></sub> ‌ my casual accs :</font><div style="line-height:3px;"><br>
+<div style="position:relative;  top:-8; width: 135px; height: 230px; overflow:hidden; float:left; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:14px; padding:5px; padding-top:5px;">
+<div style="margin-top:-5px;"><font color="#b09698">
+<sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/ecPVEov.png"></sub></sub></sub> ‌ my websites :</font><div style="line-height:2px;"><br>
 <br></div>
- ‌  ‌‌ <font color="#7a6b6b">tmblr : </font><a id="ooo" title="photo blog" href="https://pooftie.me" target="_blank" >pooftie</a><br>
- ‌  ‌‌ <font color="#7a6b6b">twt : </font><a id="ooo" title="ascii art acc" href="https://twitter.com/pooftie" target="_blank" >pooftie</a><br>
- ‌  ‌‌ <font color="#7a6b6b">insta : </font><a id="ooo" title="self care acc" href="https://instagr.am/pooftie" target="_blank" >pooftie</a><br>
- ‌  ‌‌ <font color="#7a6b6b">yt : </font><a id="ooo" title="playlist ch" href="https://youtube.com/pooftie" target="_blank" >pooftie</a><br>
-<br>
-<sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> ‌ my dev accs :</font><div style="line-height:3px;"><br>
-<br></div>
- ‌  ‌‌ <font color="#7a6b6b">github : </font><a id="ooo" title="web platform" href="https://github.com/middlepot" target="_blank" >middlepot</a><br>
- ‌  ‌‌ <font color="#7a6b6b">steam : </font><a id="ooo"title="pc platform" href="https://steampowered.com/dev/middlepot/" target="_blank" >middlepot</a><br>
- ‌  ‌‌ <font color="#7a6b6b">apple : </font><a id="ooo" title="ios platform" href="https://apps.apple.com/developer/id1591751958" target="_blank" >middlepot</a><br>
- ‌  ‌‌ <font color="#7a6b6b">play : </font><a id="ooo" title="android platform" href="https://play.google.com/store/apps/dev?id=6235261695333627392" target="_blank" >middlepot</a><br>
+<div style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
+<font color="#7a6b6b">://</font> <a id="ooo" href="http://ഒ.㏄" target="_blank" >ഒ.㏄</a><br>
+ ‌  ‌‌ ‌ <font color="#7a6b6b">⤷</font> <a id="ooo" href="https://middlepot.com" target="_blank" >middlepot.com</a><br>
+<font color="#7a6b6b">://</font> <a id="ooo" href="https://pooftie.me" target="_blank" >pooftie.me</a><br>
+<font color="#7a6b6b">://</font> <a id="ooo" href="https://poofties.club" target="_blank" >poofties.club</a><br>
+<font color="#7a6b6b">://</font> <a id="ooo" href="https://shybunny.store" target="_blank" >shybunny.store</a><br>
+<font color="#7a6b6b">://</font> <a id="ooo" href="https://myfluffy.life" target="_blank" >myfluffy.life</a><br>
+<font color="#c7adad">:// puf.cafe</font><br>
+<font color="#c7adad">:// puf.to</font><br>
+ ‌  ‌‌  ‌<font color="#c7adad">⤷ puf.bot</font><br>
+<font color="#c7adad">:// fluffy.land</font><br>
+</div></div>
 <br>
 </div>
 
-<div style="position:relative; top:-8; float:right; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 120px; height: 210px; overflow-x:hidden; line-height:14px; padding:5px;">
-<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698">
- ‌ my web pages :</font><br>
-<div style="border: none; width: 105px; height: 190px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:14px; padding-right:7px; padding-left:5px;">
-<a id="ooo" href="https://2006.pooftie.me" target="_blank" >a soft tribute</a>
+<div style="position:relative; top:-8; float:right; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 135px; height: 230px; overflow-x:hidden; line-height:20px; padding:5px; padding-top:5px;">
+<div style="margin-top:-2px;"><sub><sub><img width="auto" height="18px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698"> ‌ my side web pages :<div style="line-height:2px;"><br>
+<br></div>
+<div style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
+<!--<font color="#7a6b6b">care.</font> <a id="ooo" href="https://care.pooftie.me" target="_blank" >safe room</a>
+<br>-->
+<font color="#7a6b6b">2006.</font> <a id="ooo" href="https://2006.pooftie.me" target="_blank" >old blog tribute</a>
 <br>
-<a id="ooo" href="https://emoji.pooftie.me" target="_blank" >my emoji pack</a>
+<font color="#7a6b6b">emoji.</font> <a id="ooo" href="https://emoji.pooftie.me" target="_blank" >pack installing</a>
 <br>
-<a id="ooo" href="https://sozai.pooftie.me" target="_blank" >web materials</a>
+<font color="#7a6b6b">sozai.</font> <a id="ooo" href="https://sozai.pooftie.me" target="_blank" >web materials</a>
 <br>
-<a id="ooo" href="https://utf8.pooftie.me" target="_blank" >unicode fonts</a>
+<font color="#7a6b6b">utf8.</font> <a id="ooo" href="https://utf8.pooftie.me" target="_blank" >unicode fonts</a>
 <br>
-<a id="ooo" href="https://1997.pooftie.me" target="_blank" >win97 simulation</a>
+<font color="#7a6b6b">1997.</font> <a id="ooo" href="https://1997.pooftie.me" target="_blank" >simulation</a>
 <br>
-<a id="ooo" href="https://dream.pooftie.me" target="_blank" >dream directory</a>
+<font color="#7a6b6b">dream.</font> <a id="ooo" href="https://dream.pooftie.me" target="_blank" > directory</a>
 <br>
-<a id="ooo" href="https://ascii.pooftie.me" target="_blank" >ascii art materials</a>
+<font color="#7a6b6b">ascii.</font> <a id="ooo" href="https://ascii.pooftie.me" target="_blank" >text materials</a>
 <br>
-<a id="ooo" href="https://aes.pooftie.me" target="_blank" >aesthetic journal</a>
+<font color="#7a6b6b">aes.</font> <a id="ooo" href="https://aes.pooftie.me" target="_blank" >virtual journal</a>
 <br>
-<a id="ooo" href="https://tea.pooftie.me" target="_blank" >weather for tea ?</a>
+<font color="#7a6b6b">tea.</font> <a id="ooo" href="https://tea.pooftie.me" target="_blank" >current weather</a>
 <br>
-<a id="ooo" href="https://ch.pooftie.me" target="_blank" >pufchan simulation</a>
+<font color="#7a6b6b">ch.</font> <a id="ooo" href="https://ch.pooftie.me" target="_blank" >simulation</a>
 <br>
-<a id="ooo" href="https://care.pooftie.me" target="_blank" >self care archive</a>
+<font color="#7a6b6b">test.</font> <a id="ooo" href="https://test.pooftie.me" target="_blank" >html box</a>
 <br>
-<a id="ooo" href="https://test.pooftie.me" target="_blank" >html test</a>
+<font color="#7a6b6b">file.</font> <a id="ooo" href="https://file.pooftie.me" target="_blank" >closed archive</a>
 <br>
-<a id="ooo" href="https://file.pooftie.me" target="_blank" >my files archive</a>
+<font color="#7a6b6b">day.</font> <a id="ooo" href="https://day.pooftie.me" target="_blank" >my routine</a>
 <br>
-<a id="ooo" href="https://day.pooftie.me" target="_blank" >my routine</a>
+<font color="#7a6b6b">teddy.</font> <a id="ooo" href="https://teddy.pooftie.me" target="_blank" >virtual collection</a>
 <br>
-<a id="ooo" href="https://teddy.pooftie.me" target="_blank" >stuffie collection</a>
+<font color="#7a6b6b">kafra.</font> <a id="ooo" href="https://kafra.pooftie.me" target="_blank" >memories</a>
 <br>
-<a id="ooo" href="https://kafra.pooftie.me" target="_blank" >ragnarok memories</a>
+<font color="#7a6b6b">soft.</font> <a id="ooo" href="https://soft.pooftie.me" target="_blank" >???</a>
 <br>
-<a id="ooo" href="https://soft.pooftie.me" target="_blank" >???</a>
-<br>
+</div></div>
 </div>
-</div>
+
+
 
 <br><br><br><br>
 </div>
-<div style="position:absolute; left:20%; right:20%; top:75%; line-height:14px;">
+<div style="position:absolute; left:20%; right:20%; top:80%; line-height:14px;">
 
-<center><div style="position:relative; top:-33; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 210px; height: 20px; overflow-x:hidden; line-height:14px; padding:5px;">
+<center><div style="position:relative; top:-35; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 210px; height: 20px; overflow-x:hidden; line-height:14px; padding:5px;">
 <center><sub><sub><img width="auto" height="20px" src="https://i.imgur.com/0ncrfbs.png"></sub></sub><font color="#b09698" style="font-size:10px;"> ‌ my email : </font><a id="ooo" href="mailto:letters@middlepot.com">letters@middlepot.com</a></center></div></center>
 
-<div style="position:relative; top:-10;">
+<div style="position:relative; top:-23px;">
 <font color="#a59490" style="font-size:9px;">
-<center><b>note :</b> these are my only public active accounts.<br>if you find any other with my name, it is either idle or fake.</font></font></center><div style="line-height:3px;">
+<center><b>note :</b> i am not on social media, my old accounts are inactive.<br>
+if you find any with my name, it is either idle or fake.</font></font></center><div style="line-height:3px;">
 </div>
 <br></div>
 
@@ -548,6 +552,7 @@ z-index: 3;
 
 
 </div>
+
 </body>
 
 <!--
