--- a/recommended.html
+++ b/recommended.html
@@ -481,7 +481,11 @@ z-index: 3;
 <center>
 <img src="https://i.imgur.com/WoYT1el.png"><br><br><br>
 
-　<a href="http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/E703NhN.gif"></a>
+<a href="https://yesterweb.org" target="_blank"><img src="https://i.imgur.com/4WowYtB.png"></a>
+　<a href="https://lu.tiny-universes.net" target="_blank"><img src="https://i.imgur.com/IXJITgD.gif"></a>
+　<a href="https://likehome.neocities.org" target="_blank"><img src="https://i.imgur.com/LHdz8KN.gif"></a>　　
+
+<br><br><a href="http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/E703NhN.gif"></a>
 　<a href="http://cotton.chu.jp" target="_blank"><img src="https://i.imgur.com/enSS5tE.gif"></a>
 　<a href="https://bisuko.neocities.org/home.html" target="_blank"><img src="https://i.imgur.com/t6VOzBj.png"></a>　　
 
