--- a/recommended.html
+++ b/recommended.html
@@ -67,263 +67,11 @@ background-color: #f9f0ed;
 -webkit-border-radius: 0ex;
 border: 1px dotted #e2d5d0;
 }
-#linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
+#linkbjinho { text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px dotted #ccb1b1; }
 #linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
 
-<!--
-tooooooooltip
--->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-
-<script>
-(function($){
-	var methods={
-		init:function(options){
-			var defaults={ 
-				tip_follows_cursor:false, //tooltip follows cursor: boolean
-				tip_delay_time:700, //tooltip delay before displaying: milliseconds
-				tip_fade_speed:300, //tooltip fade in/out speed: milliseconds
-				attribute:"title" //tooltip text come from this attribute
-			},
-			options=$.extend(defaults,options);
-			if($("#s-m-t-tooltip").length===0){
-				$("body").append("<div id='s-m-t-tooltip'><div></div></div>");
-			}
-			var smtTooltip=$("#s-m-t-tooltip"); 
-			smtTooltip.css({"position":"absolute","display":"none"}).data("smt-z-index",smtTooltip.css("z-index")).children("div").css({"width":"100%","height":"100%"});
-			function smtGetCursorCoords(event){
-				var smtCursorCoordsX=event.pageX,
-					smtCursorCoordsY=event.pageY;
-				smtTooltip.style_my_tooltips("position",{
-					smtCursorCoordsX:smtCursorCoordsX,
-					smtCursorCoordsY:smtCursorCoordsY
-				});
-			}
-			$(".smt-current-element").live("mouseout mousedown click",function(){
-				var $this=$(this);
-				clearTimeout(smtTooltip_delay);
-				smtTooltip.style_my_tooltips("hide",{
-					speed:$this.data("smt-fade-speed")
-				});
-				$(document).unbind("mousemove");
-				$this.removeClass("smt-current-element");
-				if($this.attr(options.attribute)===""){
-					$this.attr(options.attribute,$this.data("smt-title"));
-				}
-			});
-			return this["live"]("mouseover",function(event){
-				var $this=$(this),
-					title=$this.attr(options.attribute);
-				$this.addClass("smt-current-element").data({"smt-title":title,"smt-fade-speed":options.tip_fade_speed}).attr(options.attribute,"");
-				smtTooltip.style_my_tooltips("update",{
-					title:title,
-					speed:options.tip_fade_speed,
-					delay:options.tip_delay_time,
-					tip_follows_cursor:options.tip_follows_cursor
-				});
-				$(document).bind("mousemove", function(event){
-					smtGetCursorCoords(event); 
-				});
-			});
-		},
-		update:function(options){
-			var $this=$(this);
-			$this.stop().css({"display":"none","z-index":$this.data("smt-z-index")}).children("div").text(options.title);
-			smtTooltip_delay=setTimeout(function(){
-				$this.style_my_tooltips("show",{
-					speed:options.speed,
-					tip_follows_cursor:options.tip_follows_cursor
-				})
-			}, options.delay);
-		},
-		show:function(options){
-			var $this=$(this);
-			$this.stop().fadeTo(options.speed,1);
-			if(!options.tip_follows_cursor){
-				$(document).unbind("mousemove");
-			}
-		},
-		hide:function(options){
-			var $this=$(this);
-			$this.stop().fadeTo(options.speed,0,function(){
-				$this.css({"z-index":"-1"});
-			});
-		},
-		position:function(options){
-			var $this=$(this),
-				winScrollX=$(window).scrollLeft(),
-				winScrollY=$(window).scrollTop(),
-				tipWidth=$this.outerWidth(true),
-				tipHeight=$this.outerHeight(true),
-				leftOffset=(options.smtCursorCoordsX+tipWidth)-winScrollX,
-				topOffset=(options.smtCursorCoordsY+tipHeight)-winScrollY;
-			if(leftOffset<=$(window).width() && leftOffset<=$(document).width()){
-				$this.css("left",options.smtCursorCoordsX);
-			}else{
-				var thePosX=options.smtCursorCoordsX-tipWidth;
-				if(thePosX>=winScrollX){
-					$this.css("left",thePosX);
-				}else{
-					$this.css("left",winScrollX);
-				}
-			}
-			if(topOffset<=$(window).height() && topOffset<=$(document).height()){
-				$this.css("top",options.smtCursorCoordsY);
-			}else{
-				var thePosY=options.smtCursorCoordsY-tipHeight;
-				if(thePosY>=winScrollY){
-					$this.css("top",thePosY);
-				}else{
-					$this.css("top",winScrollY);
-				}
-			}
-		}
-	}
-	$.fn.style_my_tooltips=function(method){
-		if(methods[method]){
-			return methods[method].apply(this,Array.prototype.slice.call(arguments,1));
-		}else if(typeof method==="object" || !method){
-			return methods.init.apply(this,arguments);
-		}else{
-			$.error("Method "+method+" does not exist");
-		}
-	};
-})(jQuery);  
-</script>
-<script>
-
-(function($){
-
-$(document).ready(function(){
-
-$("a[title]").style_my_tooltips({
-
-tip_follows_cursor:true,
-
-tip_delay_time:90,
-
-tip_fade_speed:600,
-
-attribute:"title"
-
-});
-
-});
-
-})(jQuery);
-
-</script>
-<!--tooltip!-->
-<style>
-.tooltip{
-    display: inline;
-    position: relative;
-}
-#s-m-t-tooltip {
-max-width:300px; /*how big the tooltip can be at most*/
-border-radius: 0px; /*change your border radius*/
-padding:3px 4px 5px 4px; /*padding inside tooltip*/
-margin:10px 7px -2px 10px; /*distance from word*/
-background-color:#fcf6f2; /*background color*/ 
-  border:1px dotted #CEB6B6; /*border info*/
-  font-family:tahoma; /*tooltip font*/
-font-size:7px; /*tooltip font size*/
-letter-spacing:2px; /*tooltip letter spacing*/
-color:#CEB6B6; /*tooltip font color*/
-z-index:9999;
-}
-</style>
-
-<!--
-menuuuuuuuuuuuuuuu
--->
-<html xmlns="https://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<style type="text/css">
-			* {
-				margin: 0;
-				padding: 0;
-				font-family: Verdana;
-			}
-			
-			ul {
-				list-style: none
-			}
-			
-			#context_menu {
-				background: #fcf6f2;
-				-moz-border-radius: 1px 1px;
-				border: 1px dotted #baada3;
-				letter-spacing:1px; 
-				width: 70px;
-				font-size: 8px;
-				position: absolute;
-				display: none;
-				z-index:999;
-			}
-			
-			#context_menu ul li {
-				padding: 4px 4px;
-				-moz-border-radius: 10px 10px;
-				cursor: url(https://i.imgur.com/C9RGjYt.png), progress;
-			}
-			
-			#context_menu ul li:hover {
-				background: #fcf6f2;
-				color: #baada3;
-			}
-		</style>
-		<script type="text/javascript" language="JavaScript">
-			function click(e){
-				document.getElementById("teste").innerHTML = "";
-				var menu = document.getElementById("context_menu");
-				var mouseEvent = e || event;
-				if (mouseEvent.button == 2 || mouseEvent.button == 3) {
-					mostrar(mouseEvent);
-					menu.onmouseout = function(e){
-						var mouseEvent = e || event;
-						var element = mouseEvent.relatedTarget || mouseEvent.toElement; 
-						if (element.nodeName != "LI") {
-							mouseEvent.toElement;
-						}
-					};
-				}
-				if (mouseEvent.button == 0 || mouseEvent.button == 1) {
-					esconder();
-				}
-			}
-			
-			document.onmousedown = click;
-			document.oncontextmenu = function(){
-				return false
-			};
-			function mostrar(e){
-				var menu = document.getElementById("context_menu");
-				menu.style.display = "block";
-				menu.style.top = e.pageY + 5 + "px";
-				menu.style.left = e.pageX + 5 + "px";
-			}
-			
-			function esconder(){
-				setTimeout(function(){
-					var menu = document.getElementById("context_menu");
-					menu.style.display = "none"
-				}, 100);
-			}
-			
-		</script>
-	</head>
-		<div id="teste"></div>
-		<div id="context_menu">
-			<ul>
-				<li><font color="#baada3">stay safe.. !</font></li>
-			</ul>
-		</div>
-<!--
-menuuuuuuuuuuuuuuu
--->
 
 </head>
 
@@ -341,6 +89,16 @@ position: absolute;
 overflow-y:hidden;
 overflow-x:hidden;
  }
+#base2 {
+position: absolute;
+	left: 13%;
+	top: 10%;
+width: 935px;
+height: 540px;
+overflow-y:hidden;
+overflow-x:hidden;
+z-index: 5;
+ }
 #menu1 {
 position: absolute;
 	left: %;
@@ -349,9 +107,9 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 8;
  }
- #menu1-2 {
+#menu1-2 {
 position: absolute;
 	left: %;
 	top: 70%;
@@ -359,7 +117,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 9;
  }
 #menu2 {
 position: absolute;
@@ -369,7 +127,7 @@ width: 560px;
 height: 35px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 4;
+z-index: 10;
  }
 #menu3 {
 position: absolute;
@@ -379,7 +137,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 11;
  }
 #stuff {
 position: absolute;
@@ -388,7 +146,7 @@ position: absolute;
 width: 594px;
 height: 433px;
 overflow-x:hidden;
-z-index: 6;
+z-index: 10;
  }
 #aaa {
 position: absolute;
@@ -397,7 +155,7 @@ position: absolute;
 width: 100px;
 height: 100px;
 overflow-x:hidden;
-z-index: 3;
+z-index: 11;
  }
 @media screen and (max-width: 1000px) and (orientation: portrait){
 #everything { position: absolute; zoom: 155%;
@@ -442,7 +200,7 @@ z-index: 3;
 <img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
+<p style="font-size:10px;line-height:50%;">
 
 　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
@@ -463,8 +221,10 @@ z-index: 3;
 <div id="menu3">
 <br><br>
 　　　　　 <a href="/blog" style="text-decoration: none; color:#b29487;">my blog</a>
-</div>
+</div></div>
 
+
+<div id="base2">
 <div id="stuff">
 
 <div style="background-image:url(https://i.imgur.com/MgUmFyX.png); width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; overflow: auto; overflow: scroll; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
@@ -473,7 +233,8 @@ z-index: 3;
 <div style= "padding-left: 20%; padding-right: 20%;">
 
 <center><img src="https://i.imgur.com/DEMpKhV.png"><br><br><br>
-<font color="#a19489">these are some beautiful sites & blogs that i recommend</font></center>
+<font color="#a19489">these are some beautiful sites & blogs that i recommend</font><br><br>
+<font color="#ccb1b1">( <a href="#mybutton" id="linkbjinho">click here to get my button</a> )</font></center>
 <br><br>
 
 <div style="line-height:8px;">
@@ -481,7 +242,11 @@ z-index: 3;
 <center>
 <img src="https://i.imgur.com/WoYT1el.png"><br><br><br>
 
-<a href="https://yesterweb.org" target="_blank"><img src="https://i.imgur.com/4WowYtB.png"></a>
+<a href="https://gracelessbuteffective.neocities.org" target="_blank"><img src="https://i.imgur.com/5ooaPyb.png"></a>
+　<a href="https://anemptyblissbeyondthisworld.neocities.org" target="_blank"><img src="https://i.imgur.com/MY2tavf.png"></a>
+　<a href="https://turd.neocities.org" target="_blank"><img src="https://i.imgur.com/Rt8eOMO.png"></a>　　
+
+<br><br><a href="https://yesterweb.org" target="_blank"><img src="https://i.imgur.com/4WowYtB.png"></a>
 　<a href="https://lu.tiny-universes.net" target="_blank"><img src="https://i.imgur.com/IXJITgD.gif"></a>
 　<a href="https://likehome.neocities.org" target="_blank"><img src="https://i.imgur.com/LHdz8KN.gif"></a>　　
 
@@ -597,6 +362,7 @@ z-index: 3;
 <img src="https://i.imgur.com/WoYT1el.png"><br><br>
 </center>
 <br>
+<a name="mybutton" id="mybutton"></a>
 
 <font color="#ADA49C"><center>how to have your site / blog here :</center><br><br></font><font color="#c7b3b8">
 　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　it must be drama-free and sfw ;<br>
@@ -630,7 +396,6 @@ background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab
 </div>
 </div>
 </div>
-
 
 
 </body>
