--- a/recommended.html
+++ b/recommended.html
@@ -240,9 +240,21 @@ z-index: 11;
 <div style="line-height:8px;">
 	
 <center>
-<img src="https://i.imgur.com/WoYT1el.png"><br><br><br>
+<img src="https://i.imgur.com/WoYT1el.png"><br>
 
-<a href="https://gracelessbuteffective.neocities.org" target="_blank"><img src="https://i.imgur.com/5ooaPyb.png"></a>
+<a href="https://tokidoki.neocities.org" target="_blank"><img src="https://i.imgur.com/Fwf31AW.gif"></a>
+　<a href="https://strwbrry.neocities.org" target="_blank"><img src="https://i.imgur.com/lBc40U7.png"></a>
+　<a href="https://angelicgarden.neocities.org" target="_blank"><img width="88px" height="35px" src="https://i.imgur.com/JTqscVA.gif"></a>　　
+
+<br><br><a href="https://hawaii1999.neocities.org" target="_blank"><img src="https://i.imgur.com/n0Yse4y.gif"></a>
+　<a href="https://nekopyon.neocities.org" target="_blank"><img width="88px" height="35px" src="https://i.imgur.com/0D8YAgS.png"></a>
+　<a href="https://drawcia.neocities.org" target="_blank"><img src="https://i.imgur.com/zNu9fIY.gif"></a>　　
+
+<br><br><a href="https://5amgirlfriend.neocities.org" target="_blank"><img src="https://i.imgur.com/YLCTniy.gif"></a>
+　<a href="https://dxcccii.neocities.org" target="_blank"><img src="https://i.imgur.com/bwpT9JF.gif"></a>
+　<a href="https://cabbagesorter.neocities.org" target="_blank"><img src="https://i.imgur.com/2BkHdao.gif"></a>　　
+
+<br><br><a href="https://gracelessbuteffective.neocities.org" target="_blank"><img src="https://i.imgur.com/5ooaPyb.png"></a>
 　<a href="https://anemptyblissbeyondthisworld.neocities.org" target="_blank"><img src="https://i.imgur.com/MY2tavf.png"></a>
 　<a href="https://turd.neocities.org" target="_blank"><img src="https://i.imgur.com/Rt8eOMO.png"></a>　　
 
