--- a/recommended.html
+++ b/recommended.html
@@ -241,13 +241,14 @@ z-index: 11;
 	
 <center>
 <img src="https://i.imgur.com/WoYT1el.png"><br>
+<div style="margin-top:-8px;">
 
 <a href="https://tokidoki.neocities.org" target="_blank"><img src="https://i.imgur.com/Fwf31AW.gif"></a>
 　<a href="https://strwbrry.neocities.org" target="_blank"><img src="https://i.imgur.com/lBc40U7.png"></a>
-　<a href="https://angelicgarden.neocities.org" target="_blank"><img width="88px" height="35px" src="https://i.imgur.com/JTqscVA.gif"></a>　　
+　<a href="https://angelicgarden.neocities.org" target="_blank"><img width="88px" height="31px" src="https://i.imgur.com/JTqscVA.gif"></a>　　
 
 <br><br><a href="https://hawaii1999.neocities.org" target="_blank"><img src="https://i.imgur.com/n0Yse4y.gif"></a>
-　<a href="https://nekopyon.neocities.org" target="_blank"><img width="88px" height="35px" src="https://i.imgur.com/0D8YAgS.png"></a>
+　<a href="https://nekopyon.neocities.org" target="_blank"><img width="88px" height="31px" src="https://i.imgur.com/0D8YAgS.png"></a>
 　<a href="https://drawcia.neocities.org" target="_blank"><img src="https://i.imgur.com/zNu9fIY.gif"></a>　　
 
 <br><br><a href="https://5amgirlfriend.neocities.org" target="_blank"><img src="https://i.imgur.com/YLCTniy.gif"></a>
