--- a/faq.html
+++ b/faq.html
@@ -518,13 +518,13 @@ z-index: 11;
 
 <sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　please, read this first :</font><br><br><br>
 <font color="#B1A69E">
-there is something that i would like to specify here, although it is something always implied, sometimes i need to be more objective..<br>
-i personally don't like to use "names", "communities", or any form of group identification to represent my individual beliefs, opinions, and valuations ; therefore, you will never see me participating in specific communities or movements. i <b>never</b> use names of movements or groups to identify me or to represent my ideas and opinions. that doesn't mean that i don't support any of it, the thing is that i don't feel that they represent me properly.<br>
+there is something that i would like to clarify here, although it is always implied, sometimes i need to be more objective..<br>
+i personally don't like to use any form of group identification to represent my individual beliefs, opinions, and valuations ; therefore, you will never see me publicly participating in specific movements. i <b>never</b> use names of movements or groups to identify me or to represent my own ideas and opinions. that doesn't mean that i don't support any of it, the thing is that i don't feel that they represent me thoroughly.<br>
 it's part of what i long to : to think alone about things and formulate my own opinions according to what i individually believe. this is something i truly always support and encourage, but i understand that it is simpler to use groups when you are searching for the right path in life, i have also done this for some time !<br>
 so, if you really have an interest in knowing what i think about things, please take your time to read my texts.<br>
 i know it can be tiring, but i really think it's important to write clearly what i think instead of throwing random information here and there and calling myself things that i don't really consider myself <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font><br>
-you're always free to question me about topics and point out when i have some behavior that doesn't match what i believe, after all, i really want to improve and that would really help me !<br>
-but please don't question me about supporting or not movements and communities, because i am not part of any of this. i just support what i say i support, it's that simple.<br>
+you're free to question me about topics and point out when i have some behavior that doesn't match what i believe, after all, there's always room for improvement and that would really help me !<br>
+but please don't question me about supporting or not specific movements, because i am not part of any of this. i just support what i say i support, it's that simple.<br>
 <br><br><br><br><br><br>
 </font>
 
