--- a/credits.html
+++ b/credits.html
@@ -66,7 +66,7 @@ background-color: #f9f0ed;
 -webkit-border-radius: 0ex;
 border: 1px dotted #e2d5d0;
 }
-#linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
+#linkbjinho { text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px dotted #ccb1b1; }
 #linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
 
@@ -471,38 +471,43 @@ z-index: 3;
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
 　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;please, read this :<br><br></font>
 <font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
+this page is currently being used for crediting platforms i'm using for hosting my content.<br>
 at the moment, when it comes to my projects, i am only making use of content that is either made entirely by me, highly edited by me ( using multiple references for achieving the final result ), that fit into public use or are copyright free ( such as the image of common objects, nature, food or clothing ). when it comes to content not made by me, i make sure to keep it as fair use & personal use only.<br>
-i seek transparency and respect the work of others on this site, so i value giving credit as something important. however, it is inevitably difficult to give credits appropriately and correctly when searching for content on sites like google, tumblr, pinterest, we heart it or even old web archived sites. to avoid crediting reposted content, i refuse to credit much of the content i use in my own work if i'm not sure the person owns the image / audio. unfortunately, fake sources are very common. i don't want to spread misinformation and lies, as this can cause even worse problems than just the absence of a source. nonetheless, i try to make sure i am making fair use of the content according to the intentions of each project i work on.<br>
-i am sorry if i offended someone by not giving credits, i am always willing to properly credit and even delete someone's content, if that person so wishes. please do not hesitate to contact me if you see something of yours being used and you are not satisfied with it.<br>
+i seek transparency and respect the work of others, so i value giving credit as something important. if i ever use the work of someone else, i will credit them on the work itself. i think this is a better way to properly credit someone, instead of putting them here, on my least visited page.<br>
+if i made use of your content and you'd like credits, please do not hesitate to contact me. i am always willing to properly credit and even delete someone's content, if that person so wishes !<br><br>
+though please keep in mind that it is inevitably difficult to give credits appropriately and correctly when searching for content on repost platforms sites like pinterest, tumblr, google images, we heart it, or even some old web archived sites. to avoid crediting to the wrong person, i simply don't do so if i'm not completely sure of who owns the content.<br>
+unfortunately, fake sources are very common, and i don't want to spread misinformation and lies, as this can cause even worse problems than just the absence of a source. nonetheless, i try to make sure i am making fair use of the content according to the intentions of each project i work on.<br>
 again : a lot of the content i produce is made from scratch by me, but a lot of it is only edited or partially made by me. i try to be as clear as possible about it, but if you have any questions or think i'm not being clear enough, please contact me and i will try to explain exactly how was the process of finding the content, editing and so on.<br>
-it is difficult to be completely transparent about how much content is edited or not, especially without having the base content as a reference. content is often edited beforehand when reposted. i try my best not to cause problems for other artists, so again : i'm sorry if anything !
+it is difficult to be completely transparent about how much content is edited or not, especially without having the base content as a reference. content is often edited beforehand when reposted. nonetheless, i try my best not to cause problems for other artists !
 <br>
 </font></font></font></font>
 <br><br><br>
 
-<font family = "Verdana"><font color="#ddb5b5"><font style="font-size:10px">　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;hosting sites that i currently use :</font></font></font><br><br>
+<font family = "Verdana"><font color="#ddb5b5"><font style="font-size:10px">　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;hosting sites that i currently use for my files :</font></font></font><br><br><div style="line-height:20px;">
 <font family = "Verdana"><font color="#AD9F97"><font style="font-size:9px">
-　　html : github<br>
-　　image : imgur / file.pooftie.me<br>
-　　video : catbox / file.pooftie.me<br>
-　　audio : file.pooftie.me<br>
-　　rar : file.pooftie.me<br>
+　　　　<a id="linkbjinho" href="https://file.pooftie.me" target="_blank">file.pooftie.me</a>　<font color="#ccb6b6">( my closed archive )</font><br>
+　　　　<a id="linkbjinho" href="https://github.com" target="_blank">github.com</a>　<font color="#ccb6b6">( i use github pages )</font><br>
+　　　　<a id="linkbjinho" href="https://imgur.com" target="_blank">imgur.com</a>　<font color="#ccb6b6">( i use private hosting )</font><br>
+　　　　<a id="linkbjinho" href="https://catbox.moe" target="_blank">catbox.moe</a>　<font color="#ccb6b6">( i rarely use this one )</font><br></div>
 <br>
 </font></font></font>
 <font family = "Verdana"><font color="#ccb6b6"><font size="1">
+※ i try to keep most of my stuff hosted in my own server.<br>
+※ when i use third-party services i choose only safe and encrypted sites.<br>
 ※ i will update this list whenever i change a hosting.<br>
-※ these sites are safe and encrypted.<br>
-※ i try to keep my files within my own domains, but otherwise, privacy policy should be checked on the related websites.</font></font></font><br><br><br><br>
+</font></font></font><br><br><br><br>
 <br>
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
-　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;important safety tips :<br><br></font>
+　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;important privacy policy :<br><br></font>
 <font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
-i do bake some cookies on this website !<br>
-this is because of the hosting sites and scripts. they are safe and i never had problems with them.. cookies are not always welcome, but i think it's inevitable in some cases.<br>
-that's okay if you don't want cookies, though ! you can always use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from all cookies. the <i>opera browser</i> is the best one for your privacy as it contains VPN itself.<br>
-if you don't like javascript, you can disable it too in your browser settings, and this website will work 80% ok. basically, you won't be able to play games.<br>
-also, i sugest you to use an extension for encryption ( <i>https everywhere</i> is what i use ). i try to keep everything encrypted, but sometimes ssl certificates can expire and take a while to be renewed.. !<br>
-i always try to keep the visitors safe and privacy is something i respect, so please, any issues feel free to contact me !
+i don't bake any cookies on this website !<br>
+but, some of the hosting sites that i use, as well as some of my other websites, make use of cookies solely for useful account-related features, such as keeping you logged in when going from page to page.<br>
+and it's okay if you don't want any cookies, at all ! please feel free to use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from them. using a VPN is also an option.<br>
+if you don't like javascript, you can disable it too in your browser settings, and my websites will still work, sort of. basically, you just won't be able to play games, login into accounts, or make purchases.<br><br>
+on my websites you will never have to worry about : companies collecting your data for selling ( data marketing ), "mind-reading" technology to display ads ( or any ads in general ), sponsored content, unsolicited email spam, intrusive push notifications and pop-ups, misleading content ( clickbait ), cryptocurrency transactions and use of blockchain ( it's ruining the web AND the environment ).<br>
+i respect people's comfort and well-being deeply, so please be assured that on my end i will NEVER use or let third parties use your data for any of these malicious, greedy, exploiting and annoying intentions.<br>
+people aren't numbers, and i care about standing by what i believe in and trying my best to do something good for the world. profiting from the discomfort of others is not okay.<br>
+i only charge for services offered by me that have a maintenance cost, upon the explicit approval of users. keeping internet accessible and safe is important to me.<br>
 <br><br><br>
 </font></font></font></font>
 <font family = "Verdana"><font color="#ddb5b5"><font size="1"><br><br>
@@ -515,15 +520,12 @@ i try to make my layouts compatible for all screen sizes but it's a little hard 
 thank you for your patience.<br><br>
 </font></font></font></font>
 <font family = "Verdana"><font color="#ddb5b5"><font size="1"><br><br><br>
-　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;website disclaimer :<br><br></font>
+　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;extra website disclaimer :<br><br></font>
 <font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
-this website content is provided on an "as is" basis and therefore, makes no warranties of any kind, expressed or implied to the fullest extent permissible by applicable law. i am not responsible for any damages ( including time loss ) due to using the website. the middlepot website reserves the right to refuse service to anyone at any time, and to remove anything, content or communications for any reason, at any time and without notice.<br>
-this website has links to other sites, which, in my view, may contain useful information / tools for the visitors. this disclaimer does not apply to third party sites.<br>
-i am not responsible for the privacy policy or content present in those sites.<br>
-all personal information collected by cookies will be used to help make your visit to my website as productive and enjoyable as possible.<br>
-ensuring the confidentiality of personal data of my site's users is important for me !<br>
-all personal information concerning visitors who use the middlepot website will be treated in accordance with the applicable law.<br>
-it is recommended that you consult this page regularly in order to continually update.<br>
+my website content is provided on an "as is" basis and therefore, makes no warranties of any kind, expressed or implied to the fullest extent permissible by applicable law. my intentions are to bring happiness to people, so i am deeply sorry - but not responsible - for any damages ( including time loss ) due to using the website. my website reserves the right to refuse service to anyone at any time, and to remove anything, content or communications for any reason, at any time and without notice.<br>
+my website has links to sites from other people, which, in my view, may contain fun or useful information / tools for the visitors. this disclaimer does not apply to third party sites.<br>
+i am not responsible for the content present in those sites, but i do care about them, so please contact me if you find issues.<br><br>
+it is recommended that you consult this page regularly in order to continually update !<br>
 </font></font></font></font>
 <br><br>
 
