--- a/credits.html
+++ b/credits.html
@@ -505,9 +505,9 @@ but, some of the hosting sites that i use, as well as some of my other websites,
 and it's okay if you don't want any cookies, at all ! please feel free to use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from them. using a VPN is also an option.<br>
 if you don't like javascript, you can disable it too in your browser settings, and my websites will still work, sort of. basically, you just won't be able to play games, login into accounts, or make purchases.<br><br>
 on my websites you will never have to worry about : companies collecting your data for selling ( data marketing ), "mind-reading" technology to display ads ( or any ads in general ), sponsored content, unsolicited email spam, intrusive push notifications and pop-ups, misleading content ( clickbait ), cryptocurrency transactions and use of blockchain ( it's ruining the web AND the environment ).<br>
+keeping internet accessible and safe is important to me, so i only charge for services offered by me that have a maintenance cost, upon the users' straightforward explicit consent. displaying advertisements and phishing attempts don't fit that.<br>
 i respect people's comfort and well-being deeply, so please be assured that on my end i will NEVER use or let third parties use your data for any of these malicious, greedy, exploiting and annoying intentions.<br>
 people aren't numbers, and i care about standing by what i believe in and trying my best to do something good for the world. profiting from the discomfort of others is not okay.<br>
-i only charge for services offered by me that have a maintenance cost, upon the explicit approval of users. keeping internet accessible and safe is important to me.<br>
 <br><br><br>
 </font></font></font></font>
 <font family = "Verdana"><font color="#ddb5b5"><font size="1"><br><br>
