--- a/portfolio.html
+++ b/portfolio.html
@@ -485,7 +485,6 @@ z-index: 3;
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ web design ..<br><br></font><br>
 <a href="https://1997.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/INDlrdR.gif"></a><br><br>
 <a href="https://shybunny.middlepot.com" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/M9rz3ho.gif"></a><br><br>
-<a href="https://pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/f0mz3xF.png"></a><br><br>
 <a href="https://2006.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/gSvNpbe.gif"></a><br><br>
 <a href="https://utf8.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/qyIhmW6.png"></a><br><br>
 <a href="https://ch.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"></a>
@@ -722,7 +721,8 @@ function resetPlayer() {
 <br>
 <img width="400px" height="auto" src="https://i.imgur.com/Gc9WlWB.png"><br><br>
 <img width="400px" height="auto" src="https://i.imgur.com/PPy4T0y.png"><br><br><br>
-<img width="190px" height="auto" src="https://i.imgur.com/I5f33J8.png"> <img width="190px" height="auto" src="https://i.imgur.com/QApSfkU.png">
+<img width="190px" height="auto" src="https://i.imgur.com/I5f33J8.png"> <img width="190px" height="auto" src="https://i.imgur.com/QApSfkU.png"><br><br>
+<img width="190px" height="auto" src="https://i.imgur.com/PeQffP8.png"> <img width="190px" height="auto" src="https://i.imgur.com/LzXVDMA.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
@@ -1118,14 +1118,6 @@ function resetPlayer2() {
 <div style="border: none; width: 400px; height: 400px; overflow:hidden;">
 <model-viewer onclick="dismissPoster();" reveal="manual" style="overflow:hidden; --progress-bar-color:#d1b0b2; --progress-bar-height:2px; --poster-color:transparent; top:-120px; left:-140px; border:none; width:650px; height:650px;" src="https://file.pooftie.me/m/teddy.glb" environment-image="https://i.imgur.com/YqBKGCz.jpg" poster="https://i.imgur.com/q5eKeWy.png" exposure="1.2" data-js-focus-visible camera-controls></model-viewer>
 </div>
-<br><br><br><br>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ story games / templates ..<br><br></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/xH8WFa3.gif">
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
