--- a/portfolio.html
+++ b/portfolio.html
@@ -484,9 +484,8 @@ z-index: 3;
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ web design ..<br><br></font><br>
 <a href="https://1997.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/INDlrdR.gif"></a><br><br>
-<a href="https://shybunny.middlepot.com" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/M9rz3ho.gif"></a><br><br>
+<a href="https://shybunny.store" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/M9rz3ho.gif"></a><br><br>
 <a href="https://2006.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/gSvNpbe.gif"></a><br><br>
-<a href="https://utf8.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/qyIhmW6.png"></a><br><br>
 <a href="https://ch.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"></a>
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
