--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@ z-index: 3;
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div>
-　　06.23 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> page on: <a href="/kafra" style="text-decoration: none;"><font color="#DFB7B7">/kafra</font></a><br>
-　　06.23 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> page on: <a href="/soft" style="text-decoration: none;"><font color="#DFB7B7">/soft</font></a><br>
+　　06.23 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> page on: <a href="/kafra" style="text-decoration: none;"><font color="#DFB7B7">/kafra</font></a><br>
+　　06.23 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> page on: <a href="/soft" style="text-decoration: none;"><font color="#DFB7B7">/soft</font></a><br>
 　　06.15 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> links on: <a href="/recommended" style="text-decoration: none;"><font color="#DFB7B7">/recommended</font></a><br>
 　　06.02 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> symbols on: <a href="/ascii" style="text-decoration: none;"><font color="#DFB7B7">/ascii</font></a><br>
 　　06.01 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> pngs on: <a href="/sozai" style="text-decoration: none;"><font color="#DFB7B7">/sozai</font></a><br>
