--- a/help.html
+++ b/help.html
@@ -476,7 +476,7 @@ z-index: 11;
 <div id="stuff">
 
 
-<div style="background-image:url(https://i.imgur.com/MP2qiqN.png); width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
+<div style="background-image:url(https://i.imgur.com/WX6j7uH.png); width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
 
 
 <img style="position: absolute; left: 100px; top: -230px; overflow-y:hidden; overflow-x:hidden;" src="https://i.imgur.com/PIsAgXv.png"/>
@@ -968,7 +968,7 @@ function getPosition(el) {
 ・ take a relaxing warm bath and stay a moment in a calm and peaceful environment before going to sleep. read something instead of watching tv or use the internet can help bring sleep well<br>
 ・ take a soothing tea such as lemon balm or valerian about 30 minutes before going to bed<br>
 ・ i don't recommend listening to music while sleeping, unless it is a very soft music and with low volume. listen to loud music all night can do harm to your ears, and give a headache !<br>
-・ i highly recommend ASMR videos ( if you don't know what that means, see <a href="https://en.wikipedia.org/wiki/Autonomous_sensory_meridian_response" target="_blank" id="linklinklink">here</a> ) ! i have an asmr playlist you can check <a href="https://www.youtube.com/playlist?list=PLsBmCEP2InOp69wlTeQKg7GnB2EG5apxD" target="_blank" id="linklinklink">here</a><br>
+・ i highly recommend watching relaxing videos, such as asmr ( i personally prefer unintentional asmr )<br>
 ・ if you go to watch videos before bed just watch those that will relax you and make you sleepy. please be sure to use a blue light filter to do no harm to your eyesight, and i recommend just listening to the audio at minimum volume for faster sleep. ( don't forget to take off your earphones before falling asleep )<br>
 ・ make a diary of your sleep ! write down the time you woke up, the number of hours slept and the quality of your sleep. this will help you improve<br>
 ・ if you are sleeping properly, will have no trouble getting up early. if still, try to deal quickly with something to wake up on time: get out of the bed quickly and prepare some coffee, take your phone, play some games or see your social networks, detach from your bed, the day started !<br>
@@ -1342,7 +1342,7 @@ function getPosition(el) {
 ・ you often daydream about running away, abandoning your current life, disappearing from the lives of people you know, being someone else, or imagining yourself in magical situations that would change your life completely.<br>
 ・ if you identify with three or more of these signs, you should REALLY take time to carefully analyze the source of your stress and try your best to deal with it in the best possible way, being that taking a break from things that occupy your daily life, such as people, activities, or your current lifestyle as a whole. there is always a way out of those bad things you're going through, and even if you're unsure or can only think of temporary solutions, remember : anything you try is better than just let your mental health deteriorate !!<br>
 ・ please keep in mind that resting and taking time for your health is essential and well deserved. blaming yourself over time "wasted" for self care will only make your resting a burden, making it harder to recover. you deserve to be helped and cared for ♡ 
-<br><br><center><img src="https://i.imgur.com/9EkFzLw.png"></center>
+<br><br><center><img src="https://i.imgur.com/cve7PVN.png"></center>
 <br>
 <font color="#b78f8f">
 <font size="1">※</font> do you have something important to add ? contact me <a style="color:#b78f8f;" href="/contact">here</a> !<br>
