--- a/links.html
+++ b/links.html
@@ -493,8 +493,8 @@ z-index: 3;
 <div style="margin-top:-2px;"><sub><sub><img width="auto" height="18px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698"> ‌ my side web pages :<div style="line-height:2px;"><br>
 <br></div>
 <div style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
-<!--<font color="#7a6b6b">care.</font> <a id="ooo" href="https://care.pooftie.me" target="_blank" >safe room</a>
-<br>-->
+<font color="#7a6b6b">care.</font> <a id="ooo" href="https://care.pooftie.me" target="_blank" >my safe room</a>
+<br>
 <font color="#7a6b6b">2006.</font> <a id="ooo" href="https://2006.pooftie.me" target="_blank" >old blog tribute</a>
 <br>
 <font color="#7a6b6b">emoji.</font> <a id="ooo" href="https://emoji.pooftie.me" target="_blank" >pack installing</a>
