--- a/portfolio.html
+++ b/portfolio.html
@@ -483,9 +483,11 @@ z-index: 3;
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ web design ..<br><br></font><br>
-<a href="https://1997.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/INDlrdR.gif"></a><br><br>
+<a href="https://1997.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/tZoOsJi.gif"></a><br><br>
 <a href="https://shybunny.store" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/M9rz3ho.gif"></a><br><br>
+<a href="https://care.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/3zK3gTz.gif"></a><br><br>
 <a href="https://2006.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/gSvNpbe.gif"></a><br><br>
+<a href="https://pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/jpdAYT4.gif"></a><br><br>
 <a href="https://ch.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"></a>
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
@@ -1098,6 +1100,23 @@ function resetPlayer2() {
             setInterval(volgendefotoig, 1000);
         </script><br><br><br>
 
+<a href="https://file.pooftie.me/js/dscrd.txt" target="_blank"><img id="dscrd" width="400px" height="auto" src="https://i.imgur.com/LghKMB0.png"></a>
+        <script type = "text/javascript">
+            var imagedscrd = document.getElementById("dscrd");
+            var currentPosdscrd = 0;
+            var imagesdscrd = ["https://i.imgur.com/LghKMB0.png", "https://i.imgur.com/UthtizP.png"]
+
+            function volgendefotodscrd() {
+                if (++currentPosdscrd >= imagesdscrd.length)
+                    currentPosdscrd = 0;
+
+                imagedscrd.src = imagesdscrd[currentPosdscrd];
+            }
+
+            setInterval(volgendefotodscrd, 1000);
+        </script>
+<br><br><br><a id="linkbjinho" href="https://file.pooftie.me/js/dscrdcss.txt" target="_blank">( click here to get the css only version, for betterdiscord )</a>
+
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
@@ -1125,7 +1144,7 @@ function resetPlayer2() {
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ pc & mobile customization ..<br><br></font><br><br>
-<img width="400px" height="auto" src="https://i.imgur.com/ubcAKg9.gif"><br><br>
+<img width="400px" height="auto" src="https://i.imgur.com/UWpbSxc.gif"><br><br>
 <img id="laptop" width="auto" height="250px" src="https://i.imgur.com/9SX9ngJ.jpg">
 </img>
         <script type = "text/javascript">
